[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/new_dynamicfont_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://Cenas/Menu/Menu/Options.gd" type="Script" id=3]
[ext_resource path="res://Instanciaveis/Player/Sprites/web.png" type="Texture" id=4]

[node name="Control" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 11.2302, -6.47568 )
color = Color( 0.298039, 0.231373, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="ColorRect"]
margin_left = 102.0
margin_top = 52.0
margin_right = 219.0
margin_bottom = 68.0
custom_icons/tick = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
min_value = -40.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 2.88707
margin_top = 83.1983
margin_right = 93.8871
margin_bottom = 110.198
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.0
margin_top = 5.76217
margin_right = 32.0
margin_bottom = -0.237823
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.5874
margin_top = 52.7622
margin_right = -37.5874
margin_bottom = -61.2378
custom_fonts/font = ExtResource( 2 )
text = "Volume"

[node name="Voltar" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 89.0487
margin_top = -24.9944
margin_right = -83.9513
margin_bottom = -4.99435
custom_fonts/font = ExtResource( 2 )
text = "Voltar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="changed" from="ColorRect/HSlider" to="." method="_on_HSlider_changed"]
[connection signal="value_changed" from="ColorRect/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
